@@ -84,6 +84,7 @@ import java.util.Set;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.OutputStreamWriter;
 import java.lang.Runtime;
 
 public class RecentsPanelView extends FrameLayout implements OnItemClickListener, RecentsCallback,
@@ -512,8 +513,12 @@ public class RecentsPanelView extends FrameLayout implements OnItemClickListener
                 public boolean onLongClick(View v) {
                     clearAllNonLocked();
                     try {
-                        Runtime.getRuntime().exec("su -c sync");
-                        Runtime.getRuntime().exec("su -c echo 3 > /proc/sys/vm/drop_caches");
+                        ProcessBuilder pb = new ProcessBuilder("su", "-c", "/system/bin/sh");
+                        OutputStreamWriter osw = new OutputStreamWriter(pb.start().getOutputStream());
+                        osw.write("sync" + "\n" + "echo 3 > /proc/sys/vm/drop_caches" + "\n");
+                        osw.write("\nexit\n");
+                        osw.flush();
+                        osw.close();
                     } catch (Exception e) {
                         Log.d(TAG, "Flush caches failed!");
                     }
